; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_hash_helpers.c_foreach_htab_cleanup.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_hash_helpers.c_foreach_htab_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @foreach_htab_cleanup(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @hash_seq_term(i32* %8)
  br label %10

10:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @hash_seq_term(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
